--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,3 +34,6 @@
 
 /* winder-ladder */
 @import '../sass/components/winder-ladder/winder-ladder.scss';
+
+/* contacts */
+@import '../sass/components/contacts/contacts.scss';
