Верстка и стилизация попапа "Отправить заявку"

--- a/source/sass/components/index/promo.scss
+++ b/source/sass/components/index/promo.scss
@@ -78,7 +78,7 @@
 
     @include font(12px, 19px, 400);
   }
-  &__link {
+  &__btn {
     display: block;
     width: 209px;
     min-height: 50px;
