--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,3 +37,7 @@
 
 /* contacts */
 @import '../sass/components/contacts/contacts.scss';
+
+/* POPUPS AND POPOVERS */
+/* popup-send-application */
+@import '../sass/components/popups-and-popovers/popup-send-application.scss';
