--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -41,3 +41,4 @@
 /* POPUPS AND POPOVERS */
 /* popup-send-application */
 @import '../sass/components/popups-and-popovers/popup-send-application.scss';
+@import '../sass/components/popups-and-popovers/popup-privacy.scss';
