--- a/source/sass/components/catalog/catalog.scss
+++ b/source/sass/components/catalog/catalog.scss
@@ -52,12 +52,13 @@
       flex-direction: column;
       width: 386px;
       margin-bottom: 0;
-
-      overflow-x: auto;
       & .type-ladder__item {
         margin-right: 0;
 
         background-color: #ffffff;
+        border: 2px solid #F4F4F4;
+
+        box-shadow: 0px 4px 26px 0px rgba(0, 0, 0, 0.08);
         &:not(:last-child) {
           margin-bottom: 30px;
         }
@@ -72,14 +73,14 @@
     &__bg-decorate {
       width: $desktop-width;
       &::before {
-        right: 1183px;
+        right: 930px;
 
         height: 483px;
       }
     }
     &__container {
       width: $desktop-width;
-      padding: 14px 351px 0;
+      padding: 14px 100px 0;
       &::before {
         display: none;
       }
@@ -101,11 +102,10 @@
         width: 1218px;
         & .type-ladder__item {
           margin: 0;
-        }
-        & .type-ladder__item:nth-child(4),
-        & .type-ladder__item:nth-child(5),
-        & .type-ladder__item:nth-child(6) {
-          display: flex;
+          margin-top: auto;
+          &:not(:last-child) {
+            margin-bottom: 0;
+          }
         }
       }
     }
