--- a/source/sass/components/company/finished-projects.scss
+++ b/source/sass/components/company/finished-projects.scss
@@ -9,6 +9,55 @@
   &__wrapper-btn {
     display: none;
   }
+  &-slider {
+    position: relative;
+
+    width: 380px;
+    min-height: 537px;
+    margin-top: -83px;
+    margin-bottom: 40px;
+    padding-top: 83px;
+
+    overflow: hidden;
+  }
+  & .swiper-wrapper {
+    box-sizing: border-box;
+    margin-bottom: 30px;
+  }
+  & .swiper-slide {
+    display: flex;
+    flex-direction: column;
+    width: 380px;
+    min-height: 490px;
+    & img {
+      width: 380px;
+      min-height: 490px;
+    }
+  }
+  & .swiper-pagination {
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  & .swiper-pagination-bullet {
+    width: 9px;
+    height: 9px;
+
+    background-color: #f9bb88;
+    opacity: 1;
+
+    border-radius: 0;
+
+    --swiper-pagination-bullet-horizontal-gap: 8px;
+  }
+  .swiper-pagination-bullet-active {
+    width: 17px;
+    height: 17px;
+
+    background-color: #000000;
+  }
   &__title {
     margin-bottom: 40px;
 
@@ -20,9 +69,6 @@
 
     display: flex;
     margin-bottom: 16px;
-  }
-  &__item:not(:first-child) {
-    display: none;
   }
   &__link {
     display: block;
@@ -37,10 +83,10 @@
 
 @media (min-width: $desktop-width) {
   .finished-projects {
-    margin-bottom: 106px;
+    margin-bottom: 89px;
     &__container {
       width: $desktop-width;
-      padding: 0 351px;
+      padding: 0 100px;
     }
     &__top {
       position: relative;
@@ -48,95 +94,107 @@
     &__title {
       @include font(36px, 43.2px, 700);
     }
+    &-slider {
+      width: 1218px;
+      padding-bottom: 0;
+    }
+    & .swiper-slide {
+      width: 386px;
+      min-height: 496px;
+      & img {
+        width: 386px;
+        min-height: 496px;
+      }
+    }
     &__wrapper-btn {
       position: absolute;
-      top: -46px;
-      right: 0;
+      top: -3px;
+      right: -8px;
 
       display: flex;
-      margin-right: -64px;
-      padding-top: 3px;
+      justify-content: space-between;
+      width: 100px;
+      height: 50px;
       &::before {
         position: absolute;
         content: '';
-        top: 38%;
         left: 50%;
+        top: 50%;
 
         width: 2px;
         height: 34px;
 
         background-color: #000000;
+
+        transform: translateY(-50%);
       }
     }
     &__btn {
       position: relative;
 
-      width: 104px;
-      height: 130px;
+      width: 40px;
       padding: 0;
 
       background-color: transparent;
       border: 0;
-        &::before {
-          position: absolute;
-          content: '';
-          top: 46%;
-          left: 61%;
-
-          width: 12px;
-          height: 2px;
-
-          background-color: $second-color-bg;
-          transform: rotate(-45deg);
-        }
-        &::after {
-          position: absolute;
-          content: '';
-          top: 52%;
-          left: 61%;
-
-          width: 12px;
-          height: 2px;
-
-          background-color: $second-color-bg;
-          transform: rotate(45deg);
-        }
-    &--next {
       &::before {
-        top: 51%;
-        left: 31%;
+        position: absolute;
+        content: '';
+        top: 18px;
+        left: -1px;
+
+        width: 12px;
+        height: 2px;
+
+        background-color: $second-color-bg;
+        transform: rotate(-45deg);
       }
       &::after {
-        top: 45%;
-        left: 31%;
+        position: absolute;
+        content: '';
+        top: 25px;
+        left: -1px;
+
+        width: 12px;
+        height: 2px;
+
+        background-color: $second-color-bg;
+        transform: rotate(45deg);
+      }
+      &--next {
+        &::before {
+          top: 25px;
+          left: 31px;
+        }
+        &::after {
+          top: 18px;
+          left: 31px;
+        }
+      }
+      &:hover::before,
+      &:hover::after {
+        background-color: $main-color-bg-button;
+      }
+      &:active::before,
+      &:active::after {
+        opacity: 0.5;
       }
     }
-    &:hover::before,
-    &:hover::after {
-      background-color: $main-color-bg-button;
+    & .swiper-pagination {
+      display: none;
     }
-    &:active::before,
-    &:active::after {
-      opacity: 0.5;
-    }
-  }
   &__list {
     margin-bottom: 64px;
   }
   &__item {
-    &:not(:first-child) {
-      display: block;
       width: 386px;
       height: 496px;
-    }
-    &:not(:last-child) {
-      margin-right: 30px;
     }
     & img {
       width: 386px;
       height: 496px;
     }
-  }
+
   &__link {
     &:hover {
       color: $main-color-text;
@@ -144,5 +202,5 @@
       background-color: $main-color-bg-button;
     }
   }
-  }
+}
 }
