--- a/source/sass/components/company/principles.scss
+++ b/source/sass/components/company/principles.scss
@@ -9,7 +9,8 @@
     margin-bottom: 135px;
     &__container {
       width: $desktop-width;
-      padding: 0 321px 0 407px;
+      padding: 0 122px 0 100px;
+      margin: 0 auto;
     }
     &__title {
       width: 450px;
