--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -172,20 +172,20 @@
       min-height: inherit;
       margin: 0 auto;
       &::before {
-        right: 1183px;
+        right: 930px;
       }
     }
     &__container {
       width: $desktop-width;
       justify-content: flex-start;
-      padding: 26px 351px;
+      padding: 26px 100px 26px 100px;
       &::after {
         width: 1218px;
       }
       &--decorate-line {
         &::after {
           bottom: 0;
-          left: 352px;
+          left: 100px;
 
           width: 1218px;
         }
