--- a/source/sass/components/index/examples.scss
+++ b/source/sass/components/index/examples.scss
@@ -77,14 +77,39 @@
     }
   }
   &__list {
-    display: flex;
-    overflow-x: scroll;
-    &::-webkit-scrollbar {
-      width: 0;
-    }
+    position: relative;
+
+    width: 380px;
+    min-height: 537px;
+
+    overflow: hidden;
   }
   &__item {
-    margin-right: 20px;
+    height: 490px;
+  }
+  & .swiper-pagination {
+    bottom: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  & .swiper-pagination-bullet {
+    width: 9px;
+    height: 9px;
+
+    background-color: #f9bb88;
+    opacity: 1;
+
+    border-radius: 0;
+
+    --swiper-pagination-bullet-horizontal-gap: 8px;
+  }
+  .swiper-pagination-bullet-active {
+    width: 17px;
+    height: 17px;
+
+    background-color: #000000;
   }
   &__wrapper-btn {
     display: none;
@@ -139,23 +164,23 @@
     &__bg-decorate {
       width: $desktop-width;
       &::before {
-        right: 738px;
+        right: 485px;
       }
     }
     &__container {
       flex-direction: row;
       flex-wrap: wrap;
       width: $desktop-width;
-      padding: 110px 351px 0 351px;
+      padding: 110px 100px 0 100px;
       &::after {
         top: 53px;
-        right: 352px;
+        right: 100px;
       }
     }
     &__left-column {
       width: 416px;
       order: 1;
-      margin-right: 208px;
+      margin-right: 209px;
     }
     &__right-column {
       order: 2;
@@ -163,6 +188,7 @@
       margin-bottom: 0;
       & > div {
         display: flex;
+        flex-wrap: wrap;
       }
     }
     &__title {
@@ -186,30 +212,43 @@
       @include font(23px, 36.8px, 600);
     }
     &__list {
+      width: 490px;
+      min-height: 760px;
       padding: 0;
-
-      overflow-x: auto;
     }
     &__item {
       height: 630px;
-      margin-right: 0;
-    }
-    &__item:not(.examples__item--current) {
-      display: none;
     }
     &__img {
       width: 490px;
       height: 630px;
     }
+    & .swiper-pagination {
+      left: 265px;
+      bottom: 53px;
+
+      width: 200px;
+      justify-content: flex-start;
+    }
+    & .swiper-pagination-bullet {
+      background-color: #f4f4f4;
+    }
+    .swiper-pagination-bullet-active {
+      background-color: #000000;
+    }
     &__wrapper-btn {
       position: relative;
 
       display: flex;
+      justify-content: space-between;
       width: 208px;
       height: 130px;
+
+      background-color: $second-color-bg;
       &::before {
         position: absolute;
         content: '';
+        z-index: 3;
         top: 38%;
         left: 50%;
 
@@ -220,46 +259,43 @@
       }
     }
     &__btn {
-      width: 104px;
-      height: 130px;
+      position: relative;
+      z-index: 2;
+      top: 22px;
+      left: 0;
+
+      width: 106px;
+      min-height: 100%;
       padding: 0;
 
-      background-color: #202020;
+      background-color: $second-color-bg;
       border: 0;
-      &::before {
-        position: absolute;
-        content: '';
-        top: 46%;
-        left: 64%;
-
-        width: 12px;
-        height: 2px;
-
-        background-color: #f4f4f4;
-        transform: rotate(45deg);
+      &--next {
+        transform: rotate(180deg);
       }
+      &::before,
       &::after {
         position: absolute;
         content: '';
-        top: 52%;
-        left: 64%;
+        top: 50%;
+        left: 45%;
 
         width: 12px;
         height: 2px;
 
-        background-color: #f4f4f4;
-        transform: rotate(-45deg);
+        background-color: $second-background;
+
+        transform: translate(-45%, -50%);
       }
-      &--back {
-        margin-right: -1px;
-        &::before {
-          top: 51%;
-          left: 31%;
-        }
-        &::after {
-          top: 45%;
-          left: 31%;
-        }
+      &::before {
+        top: 53%;
+        left: 45%;
+
+        transform: rotate(45deg);
+      }
+      &::after {
+        top: 47%;
+        transform: rotate(-45deg);
       }
       &:hover::before,
       &:hover::after {
