--- a/source/sass/components/index/type-ladder.scss
+++ b/source/sass/components/index/type-ladder.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   min-height: 660px;
-  margin-bottom: 80px;
+  margin-bottom: 74px;
   &__container {
     width: $mobile-width;
     padding: 0 17px;
@@ -20,24 +20,21 @@
   &__wrapper-btn {
     display: none;
   }
-  &__list {
-    display: flex;
-    width: 2486px;
-    margin-bottom: 5px;
-
-    overflow-x: scroll;
-    &::-webkit-scrollbar {
-      width: 0;
-    }
+  & .swiper {
+    margin-top: -83px;
+    padding-top: 83px;
+    padding-bottom: 55px;
   }
-  &__item {
+  & .swiper-wrapper {
+    box-sizing: border-box;
+  }
+  & .swiper-slide {
     position: relative;
 
     display: flex;
     flex-direction: column;
     width: 386px;
     min-height: 538px;
-    margin-right: 30px;
 
     border: 2px solid $second-background;
     &::after {
@@ -53,6 +50,28 @@
 
       background: url('../img/decorate-3.svg') no-repeat;
     }
+  }
+  & .swiper-pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  & .swiper-pagination-bullet {
+    width: 9px;
+    height: 9px;
+
+    background-color: #f9bb88;
+    opacity: 1;
+
+    border-radius: 0;
+
+    --swiper-pagination-bullet-horizontal-gap: 8px;
+  }
+  .swiper-pagination-bullet-active {
+    width: 17px;
+    height: 17px;
+
+    background-color: #000000;
   }
   &__img {
     position: relative;
@@ -93,87 +112,95 @@
     width: 191px;
     min-height: 50px;
     padding: 15px 53px;
-    margin:  0 auto;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: $desktop-width) {
   .type-ladder {
     min-height: 621px;
-    margin-bottom: 120px;
+    margin-bottom: 124px;
     &__container {
       width: $desktop-width;
-      padding: 0 351px;
+      padding: 0 100px;
     }
     &__top {
       position: relative;
     }
     &__title {
+      position: relative;
+      z-index: -1;
+
       padding-left: 0;
 
       @include font(36px, 43.2px, 700);
     }
     &__wrapper-btn {
       position: absolute;
-      top: -45px;
-      right: 0;
+      top: -3px;
+      right: -8px;
 
       display: flex;
-      margin-right: -64px;
-      padding-top: 3px;
+      justify-content: space-between;
+      width: 100px;
+      height: 50px;
       &::before {
         position: absolute;
         content: '';
-        top: 38%;
         left: 50%;
+        top: 50%;
 
         width: 2px;
         height: 34px;
 
         background-color: #000000;
+
+        transform: translateY(-50%);
       }
     }
-      &__btn {
-        position: relative;
+    & .swiper {
+      padding-bottom: 0;
+    }
+    &__btn {
+      position: relative;
 
-        width: 104px;
-        height: 130px;
-        padding: 0;
+      width: 40px;
+      padding: 0;
 
-        background-color: transparent;
-        border: 0;
-          &::before {
-            position: absolute;
-            content: '';
-            top: 46%;
-            left: 61%;
+      background-color: transparent;
+      border: 0;
+      &::before {
+        position: absolute;
+        content: '';
+        top: 18px;
+        left: -1px;
 
-            width: 12px;
-            height: 2px;
+        width: 12px;
+        height: 2px;
 
-            background-color: $second-color-bg;
-            transform: rotate(-45deg);
-          }
-          &::after {
-            position: absolute;
-            content: '';
-            top: 52%;
-            left: 61%;
+        background-color: $second-color-bg;
+        transform: rotate(-45deg);
+      }
+      &::after {
+        position: absolute;
+        content: '';
+        top: 25px;
+        left: -1px;
 
-            width: 12px;
-            height: 2px;
+        width: 12px;
+        height: 2px;
 
-            background-color: $second-color-bg;
-            transform: rotate(45deg);
-          }
+        background-color: $second-color-bg;
+        transform: rotate(45deg);
+      }
       &--next {
         &::before {
-          top: 51%;
-          left: 31%;
+          top: 25px;
+          left: 31px;
         }
         &::after {
-          top: 45%;
-          left: 31%;
+          top: 18px;
+          left: 31px;
         }
       }
       &:hover::before,
@@ -185,15 +212,8 @@
         opacity: 0.5;
       }
     }
-    &__list {
-      overflow-x: auto;
-    }
-    &__item {
-      &:nth-child(4),
-      &:nth-child(5),
-      &:nth-child(6) {
-        display: none;
-      }
+    & .swiper-pagination {
+      display: none;
     }
   }
 }
